<resources>
    <string name="app_name" translatable="false">ToDo List Project</string>
    <string name="splash_heading" translatable="false">Work To Do</string>
    <string name="splash_sub_head" translatable="false">#WorkMadeEasy!</string>
    <string name="facebook_app_id" translatable="false">489646665738176</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb489646665738176</string>
    <string name="log_btn">Log In</string>
    <string name="new_title">Create</string>
    <string name="new_cancel">Cancel</string>
    <string name="new_event">4. Event</string>
    <string name="new_meeting">3. Schedule Meeting</string>
    <string name="new_grocery">2. Grocery List</string>
    <string name="new_simple">1. List</string>
    <string name="new_secret">5. Secret Note</string>
    <string name="dialog_title">Title</string>
    <string name="error_message">Error Message</string>
    <string name="btn_ok">Ok</string>
    <string name="dialog_change_btn">Set</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="get_started">Get Started</string>
    <string name="check_it_out">Check It Out</string>
    <string name="welcome">WELCOME</string>
    <string name="text1"><b>Work To Do</b>is a smart task list for everyday use.</string>
    <string name="text3">Regain clarity and calmness by getting all those tasks out of your head and onto your to-do list(no matter where you are or what  device you use).</string>
    <string name="text2"> It is truly usable with a great user experience. </string>
    <string name="feature_text1"> Grouping tasks in handy task lists</string>
    <string name="feature_text2"> Quick Task Bar - to add something hot quickly</string>
    <string name="feature_text3"> Calendar View-Get a better perspective of how busy your schedule is with calendar view. </string>
    <string name="feature_text4"> Color Coding. Assign colors to each task list to make it easier to identify which lists you are viewing
Each task can have detailed notes, and many more......</string>
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="ggle_sign_btn">Continue with Google</string>
    <string name="fb_sign_btn">Continue with Facebook</string>
    <string name="log_help"><u>Need help?</u></string>
    <string name="change_lang">Language Setting</string>
    <string name="username">UserName</string>
    <string name="settings">Settings</string>
    <string name="add_event">Add a New Event</string>
    <string name="Save">Save</string>
    <string name="event_Hint">Event:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="id">ID:</string>
    <string name="title">Title</string>
    <string name="user_profile">User Profile</string>
    <string name="themes">Themes</string>
    <string name="log_out">Log Out</string>
    <string name="body">body</string>
    <string name="start_listing">Start Listing...</string>
    <string name="date">Date</string>
    <string name="log_head">Log in</string>
    <string name="log_wlcm">Welcome to Work To Do.</string>
    <string name="user_verification">User Verification</string>
    <string name="event_date">Event Date:</string>
    <string name="craetion_date">Date of Creation</string>
    <string name="problem_in_logging_with_google">Problem in logging with Google?</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="problem_in_logging_with_facebook">Problem in logging with Facebook?</string>
    <string name="search" translatable="false">Search by title....</string>
    <string name="menu_imp">Important Lists</string>
    <string name="menu_secret">Secret Lists</string>
    <string name="nt_menu_imp">Mark as Important List</string>
    <string name="nt_menu_del">Delete List</string>
    <string name="nt_menu_share">Share list</string>

</resources>