<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/_10sdp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/change_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dialog_title"
            android:textSize="@dimen/_14ssp"
            android:padding="@dimen/_5sdp"
           android:typeface="sans"
            android:textColor="@color/txt_clr1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/change_RV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/change_title"
            app:layout_constraintStart_toStartOf="@id/change_title"
            app:layout_constraintEnd_toEndOf="@id/change_title"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/change_RV"
            app:layout_constraintEnd_toEndOf="@id/change_RV"
            android:textSize="@dimen/_12ssp"
            android:text="@string/dialog_change_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/white"
            android:background="@drawable/bg_button"
            android:typeface="sans"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/change_RV"
            app:layout_constraintEnd_toStartOf="@id/change_set"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:text="@string/new_cancel"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/white"
            android:background="@drawable/bg_button"
            android:typeface="sans"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>