<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:forceDarkAllowed="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_15sdp"
    android:elevation="@dimen/_100sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_title_Tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/error_msg_Tv"
        android:text="@string/dialog_title"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:background="@color/txt_clr1"
        android:textSize="@dimen/_18ssp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_msg_Tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/error_title_Tv"
        app:layout_constraintEnd_toEndOf="@id/error_title_Tv"
        app:layout_constraintStart_toStartOf="@id/error_title_Tv"
        android:text="@string/error_message"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/txt_clr1"
        android:textSize="@dimen/_16ssp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_BTN1"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_36sdp"
        app:layout_constraintTop_toBottomOf="@id/error_msg_Tv"
        app:layout_constraintEnd_toEndOf="@id/error_msg_Tv"
        android:textSize="@dimen/_12ssp"
        android:text="@string/btn_ok"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        android:typeface="sans"
        android:textStyle="italic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_BTN2"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_36sdp"
        app:layout_constraintTop_toBottomOf="@id/error_msg_Tv"
        app:layout_constraintEnd_toStartOf="@id/dialog_BTN1"
        android:textSize="@dimen/_12ssp"
        android:text="@string/btn_ok"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        android:typeface="sans"
        android:textStyle="italic"/>


</androidx.constraintlayout.widget.ConstraintLayout>